[gd_scene load_steps=3 format=3 uid="uid://d1c2b3d4e5f6"]

[ext_resource type="Script" path="res://scripts/TournamentMenu.gd" id="1_abcde"]
[ext_resource type="Texture2D" path="res://assets/images/backgrounds/partido.png" id="2_fghij"]

[node name="TournamentMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_abcde")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2_fghij")
expand_mode = 1
stretch_mode = 6

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.5)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "TORNEO TIKI-TAKA"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 64

[node name="MenuButtons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer/MenuButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "JUGAR SIGUIENTE PARTIDO"

[node name="RankingButton" type="Button" parent="MarginContainer/VBoxContainer/MenuButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "VER CLASIFICACIÓN"

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Volver al Menú Principal"
